[package]
name = "rust-bench"
version = "0.1.0"
authors = ["simon-fu <simonok@139.com>"]
edition = "2018"

[[bin]]
name = "tcp-bench"
path = "src/main-tcp-bench.rs"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0"
tokio = { version = "1.0", features = ["full"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
clap = "3.0.0-beta.2"