[package]
name = "rust-bench"
version = "0.1.0"
authors = ["simon-fu <simonok@139.com>"]
edition = "2018"

[[bin]]
name = "tcp-bench"
path = "src/main-tcp-bench.rs"
test = false
bench = false

[[bin]]
name = "tcp-echo-server"
path = "src/main-tcp-echo-server.rs"
test = false
bench = false

[[bin]]
name = "tcp-fanout-server"
path = "src/main-tcp-fanout-server.rs"
test = false
bench = false

[[bin]]
name = "tcp-oneway-server"
path = "src/main-tcp-oneway-server.rs"
test = false
bench = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "=1.21.2", features = ["full"] }
tokio-util = {version = "=0.7.4", features = ["full"]}
tokio-stream = { version = "=0.1.11", features = ["sync"] }

anyhow = "=1.0.65"
bytes = "=1.2.1"

# tokio = { version = "1.11.0", features = ["full"] }

getopts = "=0.2.21"

# bytes = "=1.1.0"
tracing = "=0.1.28"
tracing-subscriber = "=0.2.24"
clap = "=3.0.0-beta.2"
clap_derive = "=3.0.0-beta.2"
