[package]
name = "rust-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.7", features = ["derive"] }

tokio = { version = "1.11.0", features = ["full"] }
tokio-util = {version = "=0.6.8", features = ["full"]}
tokio-stream = { version = "=0.1.8", features = ["sync"] }

# tokio-rustls = "0.23"
anyhow = "1.0.43"
# thiserror = "1.0.26"
bytes = "1.1.0"
tracing = { version = "=0.1.29", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = "=0.2.24" 
tracing-appender = "=0.1.2"
ansi_term= "=0.12.1"

serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
