[package]
name = "rust-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# clap = { version = "=3.0.7", features = ["derive"] }
clap = { version = "=4.0.13", features = ["derive"] }

tokio = { version = "=1.21.2", features = ["full"] }
tokio-util = {version = "=0.7.4", features = ["full"]}
tokio-stream = { version = "=0.1.11", features = ["sync"] }

futures = "=0.3.24"

anyhow = "=1.0.65"
bytes = "=1.2.1"
tracing = { version = "=0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = "=0.3.16"
tracing-appender = "=0.2.2"
ansi_term = "=0.12.1"

serde = "=1.0.145"
serde_derive = "=1.0.145"
serde_json = "=1.0.86"
